k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdsv-admin
  namespace: bds
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bdsv-admin
  template:
    metadata:
      labels:
        app: bdsv-admin
    spec:
      containers:
        - name: bdsv-admin
          image: us-central1-docker.pkg.dev/coherent-emblem-469903-t5/bdsv-admin/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
