k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: admin-bds
    namespace: bds
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: default
          sectionName: web
    hostnames:
        - admin-bds.hexigon.tech
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: RequestRedirect
                requestRedirect:
                    scheme: https
                    statusCode: 301
